{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 41,
  "lineage": "3c15548f-2fdc-ed8d-b5cd-740584542ea8",
  "resources": [
    {
      "module": "module.cloud-nat-and-router",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2024-04-08T00:11:53.288-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/dev-network-test167/regions/us-central1/routers/mytest-router",
            "name": "mytest-router",
            "network": "https://www.googleapis.com/compute/v1/projects/dev-network-test167/global/networks/test-shared-net",
            "project": "dev-network-test167",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-network-test167/regions/us-central1/routers/mytest-router"
          },
          "dependencies": [
            "module.folders-and-projects.data.google_billing_account.default",
            "module.folders-and-projects.google_folder.development",
            "module.folders-and-projects.google_folder.networking",
            "module.folders-and-projects.google_folder.workloads",
            "module.folders-and-projects.google_project.my_project-in-Network-folder",
            "module.folders-and-projects.google_project.my_project-in-workload-folder",
            "module.gcp-required-apis.google_project_service.gcp_services",
            "module.gcp-required-apis.google_project_service.gcp_services2",
            "module.vpc-network.google_compute_network.vpc",
            "module.vpc-network.google_compute_network.vpc2",
            "module.vpc-network.google_compute_subnetwork.subnet",
            "module.vpc-network.google_compute_subnetwork.subnet2"
          ]
        }
      ]
    },
    {
      "module": "module.cloud-nat-and-router",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "icmp_idle_timeout_sec": 30,
            "id": "dev-network-test167/us-central1/mytest-router/my-router-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "my-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "dev-network-test167",
            "region": "us-central1",
            "router": "mytest-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.cloud-nat-and-router.google_compute_router.router",
            "module.folders-and-projects.data.google_billing_account.default",
            "module.folders-and-projects.google_folder.development",
            "module.folders-and-projects.google_folder.networking",
            "module.folders-and-projects.google_folder.workloads",
            "module.folders-and-projects.google_project.my_project-in-Network-folder",
            "module.folders-and-projects.google_project.my_project-in-workload-folder",
            "module.gcp-required-apis.google_project_service.gcp_services",
            "module.gcp-required-apis.google_project_service.gcp_services2",
            "module.vpc-network.google_compute_network.vpc",
            "module.vpc-network.google_compute_network.vpc2",
            "module.vpc-network.google_compute_subnetwork.subnet",
            "module.vpc-network.google_compute_subnetwork.subnet2"
          ]
        }
      ]
    },
    {
      "module": "module.compute-engine",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240312",
                    "labels": {
                      "my_label": "value"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/dev-innominds-test167/zones/us-east4-a/disks/mytest-instance2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/dev-innominds-test167/zones/us-east4-a/instances/mytest-instance2",
            "instance_id": "3646750085800142421",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "XzuHwSbwjCI=",
            "name": "mytest-instance2",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/dev-network-test167/global/networks/test-shared-net",
                "network_ip": "10.10.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/dev-network-test167/regions/us-east4/subnetworks/test-shared-subnet",
                "subnetwork_project": "dev-network-test167"
              }
            ],
            "project": "dev-innominds-test167",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-innominds-test167/zones/us-east4-a/instances/mytest-instance2",
            "service_account": [
              {
                "email": "test-service-account2@dev-innominds-test167.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east4-a"
          },
          "dependencies": [
            "module.compute-engine.google_service_account.default",
            "module.folders-and-projects.data.google_billing_account.default",
            "module.folders-and-projects.google_folder.development",
            "module.folders-and-projects.google_folder.networking",
            "module.folders-and-projects.google_folder.workloads",
            "module.folders-and-projects.google_project.my_project-in-Network-folder",
            "module.folders-and-projects.google_project.my_project-in-workload-folder",
            "module.gcp-required-apis.google_project_service.gcp_services",
            "module.gcp-required-apis.google_project_service.gcp_services2",
            "module.vpc-network.google_compute_network.vpc",
            "module.vpc-network.google_compute_network.vpc2",
            "module.vpc-network.google_compute_subnetwork.subnet",
            "module.vpc-network.google_compute_subnetwork.subnet2"
          ]
        }
      ]
    },
    {
      "module": "module.firewall-rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-04-08T00:11:53.028-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/dev-network-test167/global/firewalls/allow-iap-test",
            "log_config": [],
            "name": "allow-iap-test",
            "network": "https://www.googleapis.com/compute/v1/projects/dev-network-test167/global/networks/test-shared-net",
            "priority": 1000,
            "project": "dev-network-test167",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-network-test167/global/firewalls/allow-iap-test",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.folders-and-projects.data.google_billing_account.default",
            "module.folders-and-projects.google_folder.development",
            "module.folders-and-projects.google_folder.networking",
            "module.folders-and-projects.google_folder.workloads",
            "module.folders-and-projects.google_project.my_project-in-Network-folder",
            "module.folders-and-projects.google_project.my_project-in-workload-folder",
            "module.gcp-required-apis.google_project_service.gcp_services",
            "module.gcp-required-apis.google_project_service.gcp_services2",
            "module.vpc-network.google_compute_network.vpc",
            "module.vpc-network.google_compute_network.vpc2",
            "module.vpc-network.google_compute_subnetwork.subnet",
            "module.vpc-network.google_compute_subnetwork.subnet2"
          ]
        }
      ]
    },
    {
      "module": "module.firewall-rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2024-04-08T00:11:54.067-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/dev-network-test167/global/firewalls/test-firewall-ingress",
            "log_config": [],
            "name": "test-firewall-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/dev-network-test167/global/networks/test-shared-net",
            "priority": 1000,
            "project": "dev-network-test167",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-network-test167/global/firewalls/test-firewall-ingress",
            "source_ranges": [
              "10.150.0.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.folders-and-projects.data.google_billing_account.default",
            "module.folders-and-projects.google_folder.development",
            "module.folders-and-projects.google_folder.networking",
            "module.folders-and-projects.google_folder.workloads",
            "module.folders-and-projects.google_project.my_project-in-Network-folder",
            "module.folders-and-projects.google_project.my_project-in-workload-folder",
            "module.gcp-required-apis.google_project_service.gcp_services",
            "module.gcp-required-apis.google_project_service.gcp_services2",
            "module.vpc-network.google_compute_network.vpc",
            "module.vpc-network.google_compute_network.vpc2",
            "module.vpc-network.google_compute_subnetwork.subnet",
            "module.vpc-network.google_compute_subnetwork.subnet2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/dev-network-test167/global/networks/test-shared-net",
            "mtu": 0,
            "name": "test-shared-net",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "dev-network-test167",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-network-test167/global/networks/test-shared-net"
          },
          "dependencies": [
            "module.folders-and-projects.data.google_billing_account.default",
            "module.folders-and-projects.google_folder.development",
            "module.folders-and-projects.google_folder.networking",
            "module.folders-and-projects.google_folder.workloads",
            "module.folders-and-projects.google_project.my_project-in-Network-folder",
            "module.folders-and-projects.google_project.my_project-in-workload-folder",
            "module.gcp-required-apis.google_project_service.gcp_services",
            "module.gcp-required-apis.google_project_service.gcp_services2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/dev-innominds-test167/global/networks/test-service-net",
            "mtu": 0,
            "name": "test-service-net",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "dev-innominds-test167",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-innominds-test167/global/networks/test-service-net"
          },
          "dependencies": [
            "module.folders-and-projects.data.google_billing_account.default",
            "module.folders-and-projects.google_folder.development",
            "module.folders-and-projects.google_folder.networking",
            "module.folders-and-projects.google_folder.workloads",
            "module.folders-and-projects.google_project.my_project-in-Network-folder",
            "module.folders-and-projects.google_project.my_project-in-workload-folder",
            "module.gcp-required-apis.google_project_service.gcp_services",
            "module.gcp-required-apis.google_project_service.gcp_services2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-08T00:11:30.391-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/dev-network-test167/regions/us-east4/subnetworks/test-shared-subnet",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "test-shared-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/dev-network-test167/global/networks/test-shared-net",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "dev-network-test167",
            "purpose": "PRIVATE",
            "region": "us-east4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-network-test167/regions/us-east4/subnetworks/test-shared-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.folders-and-projects.data.google_billing_account.default",
            "module.folders-and-projects.google_folder.development",
            "module.folders-and-projects.google_folder.networking",
            "module.folders-and-projects.google_folder.workloads",
            "module.folders-and-projects.google_project.my_project-in-Network-folder",
            "module.folders-and-projects.google_project.my_project-in-workload-folder",
            "module.gcp-required-apis.google_project_service.gcp_services",
            "module.gcp-required-apis.google_project_service.gcp_services2",
            "module.vpc-network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-04-08T00:11:41.961-07:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/dev-innominds-test167/regions/us-east4/subnetworks/test-service-subnet",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "test-service-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/dev-innominds-test167/global/networks/test-service-net",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "dev-innominds-test167",
            "purpose": "PRIVATE",
            "region": "us-east4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dev-innominds-test167/regions/us-east4/subnetworks/test-service-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.folders-and-projects.data.google_billing_account.default",
            "module.folders-and-projects.google_folder.development",
            "module.folders-and-projects.google_folder.networking",
            "module.folders-and-projects.google_folder.workloads",
            "module.folders-and-projects.google_project.my_project-in-Network-folder",
            "module.folders-and-projects.google_project.my_project-in-workload-folder",
            "module.gcp-required-apis.google_project_service.gcp_services",
            "module.gcp-required-apis.google_project_service.gcp_services2",
            "module.vpc-network.google_compute_network.vpc2"
          ]
        }
      ]
    }
  ]
}